[Fix] Modal issue where document would scroll to top due to overflow hidden on body.

--- a/scss/_modals.scss
+++ b/scss/_modals.scss
@@ -139,7 +139,7 @@
 		outline-style: none;
 	}
 
-	&.has_overlay {
-		overflow: hidden;
-	}
+}
+html.sui-has-overlay {
+	overflow: hidden;
 }
